--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -24,8 +24,8 @@
     <section class="page-header">
       <h1 class="project-name">Lotterypicture</h1>
       <h2 class="project-tagline">图片个性化转换</h2>
-	  <h2 class="btn">网页链接(暂不开放)</a>
-	  <h2 class="btn">源码链接(暂不开放)</a>
+	  <!-- <h2 class="btn">网页链接(暂不开放)</a> -->
+	  <a href="https://github.com/fire0me/pictureDemo/archive/master.zip" class="btn">源码下载链接</a>
     </section>
 
     <section class="main-content">
